--- a/app/src/main/res/layout/activity_shots_list_demo.xml
+++ b/app/src/main/res/layout/activity_shots_list_demo.xml
@@ -2,9 +2,11 @@
 <RelativeLayout
     android:id="@+id/root_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.sinyuk.yuk.ShotsListDemo">
+
 
 </RelativeLayout>
