Remove imperfect loading layout temporarily

--- a/app/src/main/res/layout/activity_shots_list_demo.xml
+++ b/app/src/main/res/layout/activity_shots_list_demo.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
     android:id="@+id/root_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,16 +20,9 @@
             android:src="@drawable/dribbble_logo"/>
     </android.support.v7.widget.Toolbar>
 
-    <com.sinyuk.yukloadinglayout.YukLoadingLayout
-        android:id="@+id/yuk_loading_layout"
+    <FrameLayout
+        android:id="@+id/list_view_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tool_bar"
-        app:jellyColor="@android:color/white">
-
-        <FrameLayout
-            android:id="@+id/list_view_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </com.sinyuk.yukloadinglayout.YukLoadingLayout>
+        android:layout_below="@+id/tool_bar"/>
 </RelativeLayout>
