--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="white_75pct">#b1ffffff</color>
     <color name="window_background">#f5f5f5</color>
 
+    <color name="gif_badge_light">#b3ffffff</color>
+    <color name="gif_badge_dark">#68202020</color>
 </resources>
