--- a/app/src/main/res/values/style_shot_list_item.xml
+++ b/app/src/main/res/values/style_shot_list_item.xml
@@ -20,13 +20,11 @@
 
     <!--TextView-->
     <style name="slm_number">
-        <item name="android:ellipsize">middle</item>
         <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:maxWidth">48dp</item>
         <item name="android:layout_height">@dimen/icon_size_18</item>
-        <item name="android:gravity">center_vertical</item>
+        <item name="android:gravity">center_vertical|end</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/official_slate</item>
         <item name="android:textSize">@dimen/material_text_caption2</item>
