--- a/app/src/main/res/values/style_shot_list_item.xml
+++ b/app/src/main/res/values/style_shot_list_item.xml
@@ -45,6 +45,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@drawable/selector_pro_badge</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="slm_body">
