--- a/app/src/main/res/layout/activity_shots_list_demo.xml
+++ b/app/src/main/res/layout/activity_shots_list_demo.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     android:id="@+id/root_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,13 +12,16 @@
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        app:navigationIcon="@drawable/hamburger_menu">
 
-        <ImageView
-            android:layout_width="match_parent"
+  <!--      <com.sinyuk.yuk.widgets.FontTextView
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:src="@drawable/dribbble_logo"/>
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:gravity="center_vertical"
+            android:text="Dribbble"
+            android:textColor="@color/official_pink"/>-->
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
