--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,8 @@
     </style>
 
 
+    <style name="Splash" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash_backdrop</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
 </resources>
