--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,6 @@
 
     <color name="gif_badge_light">#b3ffffff</color>
     <color name="gif_badge_dark">#68202020</color>
+
+    <color name="immersive_bars">#2f000000</color>
 </resources>
