--- a/app/src/main/res/drawable/splash_backdrop.xml
+++ b/app/src/main/res/drawable/splash_backdrop.xml
@@ -5,6 +5,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/dribbble_ball"/>
+            android:src="@drawable/sample_04"/>
     </item>
 </layer-list>
