--- a/app/src/main/res/values/style_toolbar.xml
+++ b/app/src/main/res/values/style_toolbar.xml
@@ -5,5 +5,6 @@
         <item name="android:layout_width">56dp</item>
         <item name="android:scaleType">centerInside</item>
         <item name="android:padding">16dp</item>
+        <item name="android:background">?selectableItemBackground</item>
     </style>
 </resources>
