--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -1,39 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     android:id="@+id/root_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tool_bar"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:background="@android:color/white"
-        android:navigationContentDescription="Exit"
-        app:contentInsetStart="0dp"
-        app:navigationIcon="@drawable/dribbble_ball">
+        android:layout_height="wrap_content"
+        app:elevation="0dp">
 
-    </android.support.v7.widget.Toolbar>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="@android:color/white"
+            android:navigationContentDescription="Exit"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:navigationIcon="@drawable/dribbble_ball">
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
 
     <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
         android:id="@+id/progress_bar"
         style="@style/IrisProgressBar"
         android:layout_width="match_parent"
-        android:layout_height="4dp"/>
+        android:layout_height="4dp"
+        app:layout_anchor="@id/app_bar_layout"
+        app:layout_anchorGravity="bottom"/>
 
     <com.sinyuk.yuk.utils.BetterViewAnimator
         android:id="@+id/view_animator"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <!--    <include
                 layout="@layout/feed_layout_loading"/>-->
 
-        <com.tencent.smtt.sdk.WebView
+        <com.sinyuk.yuk.widgets.NestedWebView
             android:id="@+id/web_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -44,4 +54,4 @@
             layout="@layout/feed_layout_error"/>
     </com.sinyuk.yuk.utils.BetterViewAnimator>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
