--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -16,10 +16,20 @@
             android:id="@+id/tool_bar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="@android:color/white"
+            android:background="@color/official_pink"
             android:navigationContentDescription="Exit"
+            app:contentInsetEnd="0dp"
+            app:contentInsetStart="0dp"
             app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:navigationIcon="@drawable/dribbble_ball">
+            app:navigationIcon="@drawable/close"
+            app:titleTextAppearance="@style/browser_activity_title"
+            app:titleTextColor="@color/official_pink">
+
+            <ImageView
+                android:id="@+id/menu"
+                style="@style/ToolbarButton"
+                android:layout_gravity="end"
+                android:src="@drawable/over_flow"/>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
@@ -30,8 +40,10 @@
         style="@style/IrisProgressBar"
         android:layout_width="match_parent"
         android:layout_height="6dp"
+        android:visibility="invisible"
         app:layout_anchor="@id/app_bar_layout"
-        app:layout_anchorGravity="bottom"/>
+        app:layout_anchorGravity="bottom"
+        app:spb_colors="@array/iris_color_dark"/>
 
     <com.sinyuk.yuk.utils.BetterViewAnimator
         android:id="@+id/view_animator"
@@ -39,9 +51,6 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <!--    <include
-                layout="@layout/feed_layout_loading"/>-->
 
         <com.sinyuk.yuk.widgets.NestedWebView
             android:id="@+id/web_view"
