--- a/app/src/main/res/values/style_iris_progress_bar.xml
+++ b/app/src/main/res/values/style_iris_progress_bar.xml
@@ -9,7 +9,7 @@
         <item name="spb_interpolator">spb_interpolator_acceleratedecelerate</item>
         <item name="spb_mirror_mode">false</item>
         <item name="spb_reversed">false</item>
-        <item name="spb_colors">@array/iris_colors</item>
+        <item name="spb_colors">@array/iris_color_dark</item>
         <item name="spb_progressiveStart_activated">true</item>
         <item name="android:indeterminate">true</item>
     </style>
