--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/root_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,13 +22,19 @@
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:navigationIcon="@drawable/close"
             app:titleTextAppearance="@style/browser_activity_title"
-            app:titleTextColor="@color/official_pink">
+            app:titleTextColor="@color/white">
+
 
             <ImageView
                 android:id="@+id/menu"
                 style="@style/ToolbarButton"
                 android:layout_gravity="end"
-                android:src="@drawable/over_flow"/>
+                android:src="@drawable/over_flow" />
+
+            <ImageView
+                android:id="@+id/favicon"
+                style="@style/ToolbarButton"
+                android:layout_gravity="end" />
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
@@ -43,7 +48,7 @@
         android:visibility="invisible"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom"
-        app:spb_colors="@array/iris_color_dark"/>
+        app:spb_colors="@array/iris_color_dark" />
 
     <com.sinyuk.yuk.utils.BetterViewAnimator
         android:id="@+id/view_animator"
@@ -57,10 +62,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <include
-            layout="@layout/feed_layout_error"/>
+        <include layout="@layout/feed_layout_error" />
     </com.sinyuk.yuk.utils.BetterViewAnimator>
 
 </android.support.design.widget.CoordinatorLayout>
