--- a/app/src/main/res/layout/dribbble_oauth_wait_layout.xml
+++ b/app/src/main/res/layout/dribbble_oauth_wait_layout.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/error_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/wait_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Something wrong"
-        android:textSize="24sp"/>
+        android:text="waiting..."
+        android:textSize="24sp"
+        android:textStyle="bold"/>
 </RelativeLayout>
