--- a/app/src/main/res/values/style_shot_list_item.xml
+++ b/app/src/main/res/values/style_shot_list_item.xml
@@ -23,12 +23,19 @@
         <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">@dimen/icon_size_18</item>
+        <item name="android:layout_height">30dp</item>
         <item name="android:gravity">center_vertical|end</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/official_slate</item>
         <item name="android:textSize">@dimen/material_text_caption2</item>
         <item name="android:drawablePadding">@dimen/content_space_2</item>
+    </style>
+
+    <style name="slm_icon">
+        <item name="android:clickable">true</item>
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:scaleType">centerInside</item>
     </style>
 
     <style name="slm_username" parent="single_line_text">
