--- a/app/src/main/res/values-v21/style_shot_list_item.xml
+++ b/app/src/main/res/values-v21/style_shot_list_item.xml
@@ -7,9 +7,8 @@
                 <item name="cardElevation">@dimen/cardView_default_elevation</item>
                 <item name="contentPaddingTop">@dimen/content_space_8</item>
                 <item name="android:stateListAnimator">@drawable/shot_list_item_selector</item>
-                <item name="contentPaddingLeft">@dimen/content_space_8</item>
-                <item name="contentPaddingRight">@dimen/content_space_8</item>
-                <item name="contentPaddingBottom">@dimen/content_space_4</item>
+               <!-- <item name="contentPaddingLeft">@dimen/content_space_8</item>
+                <item name="contentPaddingRight">@dimen/content_space_8</item>-->
                 <item name="android:layout_marginLeft">@dimen/content_space_8</item>
                 <item name="android:layout_marginRight">@dimen/content_space_8</item>
         </style>
