--- a/app/src/main/res/values/style_shot_list_item.xml
+++ b/app/src/main/res/values/style_shot_list_item.xml
@@ -11,9 +11,8 @@
         <item name="cardCornerRadius">@dimen/cardView_default_corner_radius</item>
         <item name="cardElevation">@dimen/cardView_default_elevation</item>
         <item name="contentPaddingTop">@dimen/content_space_8</item>
-        <item name="contentPaddingLeft">@dimen/content_space_8</item>
-        <item name="contentPaddingRight">@dimen/content_space_8</item>
-        <item name="contentPaddingBottom">@dimen/content_space_4</item>
+       <!-- <item name="contentPaddingLeft">@dimen/content_space_8</item>
+        <item name="contentPaddingRight">@dimen/content_space_8</item>-->
         <item name="android:layout_marginLeft">@dimen/content_space_8</item>
         <item name="android:layout_marginRight">@dimen/content_space_8</item>
     </style>
@@ -33,9 +32,11 @@
 
     <style name="slm_icon">
         <item name="android:clickable">true</item>
-        <item name="android:layout_width">30dp</item>
-        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_width">40dp</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:scaleType">centerInside</item>
+        <item name="android:tint">@color/official_slate</item>
     </style>
 
     <style name="slm_username" parent="single_line_text">
@@ -68,13 +69,6 @@
         <item name="android:textSize">@dimen/material_text_caption2</item>
     </style>
 
-    <!--ImageView-->
-    <style name="slm_button">
-        <item name="android:layout_height">@dimen/icon_size_18</item>
-        <item name="android:layout_width">@dimen/icon_size_18</item>
-        <item name="android:tint">@color/official_slate</item>
-        <item name="android:scaleType">centerInside</item>
-    </style>
 
     <style name="slm_avatar">
         <item name="android:layout_height">@dimen/icon_size_24</item>
