--- a/app/src/main/res/drawable/shot_list_item_selector.xml
+++ b/app/src/main/res/drawable/shot_list_item_selector.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <set>
-            <objectAnimator android:duration="@android:integer/config_shortAnimTime"
+            <objectAnimator android:duration="100"
                             android:propertyName="translationZ"
                             android:valueTo="0dp"
                             android:valueType="floatType"/>
