--- a/app/src/main/res/values-v21/style_shot_list_item.xml
+++ b/app/src/main/res/values-v21/style_shot_list_item.xml
@@ -6,6 +6,7 @@
                 <item name="cardCornerRadius">@dimen/cardView_default_corner_radius</item>
                 <item name="cardElevation">@dimen/cardView_default_elevation</item>
                 <item name="contentPaddingTop">@dimen/content_space_8</item>
+                <item name="android:clickable">true</item>
                 <item name="android:stateListAnimator">@drawable/shot_list_item_selector</item>
                <!-- <item name="contentPaddingLeft">@dimen/content_space_8</item>
                 <item name="contentPaddingRight">@dimen/content_space_8</item>-->
