--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="Yuk" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/official_slate</item>
-        <item name="colorPrimaryDark">@color/official_pink</item>
-        <item name="colorAccent">@color/official_pro</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/window_background</item>
 
     </style>
@@ -20,9 +20,5 @@
     </style>
 
     <style name="Yuk.Detail">
-      <!--  <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsTranslucent">true</item>-->
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 </resources>
