--- a/app/src/main/res/layout/detail_activity_header.xml
+++ b/app/src/main/res/layout/detail_activity_header.xml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="@dimen/content_space_8">
 
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_gravity="center_vertical"
-        tools:src="@drawable/sample_04"/>
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        tools:src="@drawable/dribbble_ball"/>
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        android:orientation="vertical">
+        android:layout_marginLeft="@dimen/content_space_8"
+        android:layout_toEndOf="@+id/avatar"
+        android:layout_toRightOf="@+id/avatar"
+        android:includeFontPadding="false"
+        android:lineSpacingExtra="1sp"
+        android:textSize="@dimen/material_text_subhead"
+        android:textStyle="bold"
+        tools:text="Material Design Todo List"/>
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            android:lineSpacingExtra="2sp"
-            android:textSize="@dimen/material_text_headline"
-            tools:text="Material Design Todo List"/>
+    <TextView
+        android:id="@+id/publish_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_marginLeft="@dimen/content_space_8"
+        android:layout_marginTop="@dimen/content_space_2"
+        android:layout_toEndOf="@+id/avatar"
+        android:layout_toRightOf="@+id/avatar"
+        android:includeFontPadding="false"
+        android:textSize="@dimen/material_text_caption2"
+        tools:text="by Jordi Tambillo on May 19, 2015"/>
 
-        <TextView
 
-            android:id="@+id/publish_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/content_space_4"
-            android:includeFontPadding="false"
-            tools:text="by Jordi Tambillo on May 19, 2015"/>
-    </LinearLayout>
-</LinearLayout>
+
+</RelativeLayout>
