--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,5 @@
     <color name="immersive_bars">#2f000000</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="divider_color">#eeeeee</color>
 </resources>
