--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -100,6 +100,10 @@
                 app:trimLength="200"
                 tools:text="@string/sample_description"/>
 
+            <FrameLayout
+                android:id="@+id/attachments_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2000dp"
