--- a/app/src/main/res/layout/home_menu_fragment.xml
+++ b/app/src/main/res/layout/home_menu_fragment.xml
@@ -7,9 +7,10 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/fake_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Hello world"
+        android:text="Login"
         android:textSize="24sp"/>
 </LinearLayout>
