Ready to create attachment detail page

--- a/app/src/main/res/layout/detail_activity_attachment_item.xml
+++ b/app/src/main/res/layout/detail_activity_attachment_item.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="@dimen/attachment_thumbnail_height">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/cardView_distinct_corner_radius"
+    app:cardElevation="0dp">
 
     <com.sinyuk.yuk.widgets.FourThreeImageView
         android:id="@+id/thumbnail"
         android:layout_width="@dimen/attachment_thumbnail_height"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        tools:src="@drawable/pic_fill"/>
-</FrameLayout>
+        tools:src="@drawable/sample_04"/>
+</android.support.v7.widget.CardView>
